[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/ui/paper.png" type="Texture" id=1]
[ext_resource path="res://Nodes/InsufficentScore.gd" type="Script" id=2]
[ext_resource path="res://Assets/ui/theme.tres" type="Theme" id=3]

[node name="InsufficentScore" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 480.0
margin_top = 270.0
margin_right = -480.0
margin_bottom = -270.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 180.0
margin_top = 45.0
margin_right = 780.0
margin_bottom = 495.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -296.0
margin_top = -220.0
margin_right = 296.0
margin_bottom = 220.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActualScore" type="Label" parent="TextureRect/VBoxContainer"]
margin_top = 145.0
margin_right = 592.0
margin_bottom = 189.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "YOU HAVE: X CROWNS"
align = 1
valign = 1

[node name="RequiredScore" type="Label" parent="TextureRect/VBoxContainer"]
margin_top = 193.0
margin_right = 592.0
margin_bottom = 237.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "YOU NEED: X CROWNS TO LEFT THE CASTLE"
align = 1
valign = 1

[node name="Continue" type="Label" parent="TextureRect/VBoxContainer"]
visible = false
margin_top = 217.0
margin_right = 592.0
margin_bottom = 261.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "YOU CAN CONTINUE OR LEFT WITH THE TREASURES"
align = 1
valign = 1

[node name="Control" type="Control" parent="TextureRect/VBoxContainer"]
margin_top = 241.0
margin_right = 592.0
margin_bottom = 251.0
rect_min_size = Vector2( 0, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
margin_top = 255.0
margin_right = 592.0
margin_bottom = 295.0
alignment = 1

[node name="Okay" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
margin_left = 226.0
margin_right = 310.0
margin_bottom = 40.0
text = "  OKAY  "

[node name="Left" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
margin_left = 314.0
margin_right = 366.0
margin_bottom = 40.0
text = "LEFT "
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/Okay" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/Left" to="." method="_on_Left_pressed"]
